<resources>
    <string name="app_name">QAU News Alert</string>

    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="contact">Contact</string>
    <string name="Account">Account</string>
    <string name="Search">Search News</string>
    <string name="Searchbutton">Search</string>

    <string name="Unimail">Email</string>
    <string name="mailaddress">info@qau.edu.pk</string>
    <string name="Uniweb">Website</string>
    <string name="websiteaddress">http://qau.edu.pk/</string>
    <string name="unicontact">Call</string>


    <string name="loginhead">LOGIN</string>
    <string name="Regid">University Reg.ID</string>
    <string name="Password">Password</string>
    <string name="login">login</string>
    <string name="do_not">Do not have account? </string>
    <string name="Signup"> Signup</string>

    <string name="signuphead">Signup Form </string>
    <string name="fullname">Enter Full Name</string>

    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm Password</string>


    <string name="Recent">Recent News</string>
    <string name="viewall">View All News</string>


    <string name="profile">Profile</string>
    <string name="categories">News Categories</string>
    <string name="saved">Saved</string>
    <string name="adminnr">View News Request</string>
    <string name="About">About</string>
    <string name="newsRequestAdmin">News Requests</string>
    <string name="addnews">Add News Detail</string>
    <string name="addnewstitle">Add News title</string>
    <string name="addnewsdes">Add News Description</string>

    <string name="username">Name</string>
    <string name="Edit">Edit</string>
    <string name="changepass">Change Password</string>

    <string name="admission">Admission </string>
    <string name="education">Education</string>
    <string name="sports">Sports</string>
    <string name="art">Art-Entertainment</string>
    <string name="transport">Transport</string>
    <string name="department">Department</string>

    <string name="addetail">Admission Dates,Merit Lists,Entry Test Dates,Semester Schedule,Fee Schedule</string>
    <string name="edudetail">Seminars,Conferences,Workshops</string>
    <string name="sportsdetail">All Sports Schedule</string>
    <string name="artdetail">Society Events,National Events,Musical Events,Fun Fairs</string>
    <string name="transdetail">University Transport Updates</string>
    <string name="deptdetail">Results,Date Sheet,Assignments/ Results/ Lectures,Faculty Meetings</string>


    <string name="notification">Notifications</string>
    <string name="managepush">Manage My Push</string>


    <string name="notificationthroughmail">Notification Through Email</string>

    <string name="setting">Settings</string>
    <string name="Admin">Admin</string>

    <string name="logout">Logout</string>

    <string name="request">Request to Publish news</string>
    <string name="adminpublishbtn">Publish news</string>
    <string name="upload">Upload Photo</string>
    <string name="take">Take Photo</string>


    <string name="newemail">New Email</string>
    <string name="confirm">Confirm</string>

    <string name="currentpassword">Current Password</string>
    <string name="reenter">Re-enter Password</string>

    <string-array name="Select_categories">
        <item>Select News Category!</item>
        <item>Admission</item>
        <item>Education</item>
        <item>Sports</item>
        <item>Art-Entertainment</item>
        <item>Transport</item>
        <item>Department</item>
    </string-array>


    <string-array name="Select_Department">
        <item>Select Department!</item>
        <item>Chemistry</item>
        <item>Computer Sciences</item>
        <item>Earth Sciences</item>
        <item>Electronics</item>
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Statistics</item>
        <item>Management Sciences</item>
        <item>Anthropology</item>
        <item>Sociology</item>
        <item>Defence and Strategic Studies</item>
        <item>School of Economics</item>
        <item>History</item>
        <item>School of Politics and IR</item>
        <item>Area Study Centre</item>
        <item>Center of Excellence in Gender Studies</item>
        <item>National Institute of Psychology</item>
        <item>Taxila Institute of Asian Civilization</item>
        <item>National Institute of Pakistan Studies</item>
        <item>Linguistics</item>
        <item>Biochemistry</item>
        <item>Environmental Sciences</item>
        <item>Microbiology</item>
        <item>Plant Sciences</item>
        <item>Biotechnology</item>
        <item>National Center for Bioinformatics</item>
        <item>Pharmacy</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_registeruser" translatable="false">Registeruser</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="title_activity_admin" translatable="false">Admin</string>
    <string name="title_activity_a">A</string>
    <string name="title_activity_staff">Staff</string>
    <!-- TODO: Remove or change this placeholder text -->
    /


</resources>
