<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home_admin"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_newsRequest_admin"
                android:icon="@drawable/ic_baseline_group_add_24"
                android:title="@string/newsRequestAdmin"
                app:showAsAction="always"/>
            <item
                android:id="@+id/nav_categories_admin"
                android:icon="@drawable/categoriesp"
                android:title="@string/categories" />
    </group>
    <item
        android:id="@+id/log_out_admin"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        android:onClick="logout"/>
</menu>
