<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
android:layout_weight="6"
    android:orientation="vertical"
    tools:context=".ui.usernewscategories.UserNewsCategoriesFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#e8eced"
            android:layout_marginLeft="2dp"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorDark"
                android:text="@string/admission"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addetail"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#e8eced"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorDark"
                android:text="@string/education"
                android:textSize="25sp"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edudetail"
                android:padding="5dp"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e8eced"
         android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:text="@string/sports"
                android:textColor="@color/colorDark"
                android:textSize="25sp"
              /><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sportsdetail"
            android:padding="5dp"
            android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="#e8eced"
            android:layout_marginLeft="2dp"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:text="@string/art"
                android:textColor="@color/colorDark"
                android:textSize="25sp"
               /><TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artdetail"
            android:padding="5dp"
            android:textSize="15sp" />

        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="#e8eced"
            android:layout_marginLeft="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:text="@string/transport"
                android:textColor="@color/colorDark"
                android:textSize="25sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transdetail"
                android:padding="5dp"
                android:textSize="15sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginLeft="2dp"
        android:background="#e8eced"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="5dp"
            android:text="@string/department"
            android:textColor="@color/colorDark"
            android:textSize="25sp"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deptdetail"
            android:padding="5dp"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>