<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".activities.Signup">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signuphead"
        android:textColor="@color/colorDark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:hint="@string/fullname"

        android:padding="7dp" />

    <EditText

        android:id="@+id/regid"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        android:padding="7dp"
        android:background="@drawable/border"
        android:hint="@string/Regid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:padding="7dp">
        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Select_Department"
            />
    </LinearLayout>


    <EditText

        android:id="@+id/sigemail"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        android:padding="7dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/border"
        android:hint="@string/email" />

    <EditText

        android:id="@+id/signpass"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        android:padding="7dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:maxLength="8"
        android:hint="@string/Password" />

    <EditText

        android:id="@+id/confirmpass"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/border"
        android:hint="@string/confirmpassword" />

    <Button

        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_color"
        android:text="@string/register"
        android:onClick="btn_register"
        android:textColor="#FFFFFF" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>