<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        app:srcCompat="@drawable/ic_login" />

    <EditText


        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:padding="7dp"
        android:background="@drawable/border"
        android:id="@+id/useregid"
        android:hint="@string/Regid" />

    <EditText

        android:id="@+id/userpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:background="@drawable/border"
        android:hint="@string/Password" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_color"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/do_not"
            android:textColor="@color/colorDark" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:textColor="@color/colorDark"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>