<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".activities.PublishNews">

    <EditText
        android:id="@+id/adminnews_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:hint="@string/addnewstitle"
        android:padding="7dp" />

    <EditText
        android:id="@+id/adminnews_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:hint="@string/addnewsdes"
        android:padding="7dp" />


        <EditText
            android:id="@+id/select_dialog_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:padding="7dp" />



    <ImageView
        android:id="@+id/publishnewsimage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_blue_24dp" />

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_gravity="center"
            android:text="@string/upload"

            android:textColor="#FFFFFF"
            android:background="@drawable/button_color"
            />

<!--        <TextView-->

<!--            android:layout_width="150dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingRight="3dp"-->
<!--            android:text="@string/take"-->
<!--            android:textAlignment="textEnd"-->
<!--            android:textColor="@color/colorDark"-->
<!--            android:textSize="20dp" />-->
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:paddingBottom="50dp">
    <Button
        android:id="@+id/publish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="publishbnewsbtn"
        android:layout_margin="20dp"
        android:background="@drawable/button_color"
        android:text="@string/adminpublishbtn"
        android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
</ScrollView>